protocols/tests/multipliers/mult_d2/second_thread_fails.out
error: The two expressions did not evaluate to the same value (in transaction `mul(6, 8, 47)`)
   ┌─ multipliers/mult_d2/mult_d2.prot:22:13
   │
22 │   assert_eq(s, DUT.s);
   │             ^^^^^^^^ LHS Value: 47, RHS Value: 48

Trace 0 execution failed.
